@@ -15,6 +15,7 @@ requires: [git, railsapps,
   rails_bootstrap,
   rails_foundation,
   rails_omniauth,
+  rails_omniauth_mongoid,
   rails_devise,
   rails_devise_pundit,
   rails_signup_download,
